--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
   <div id="wedding">
    <!-- 内容 -->
    <div id="weddingCons" class="wedding-cons">
+    <audio src="./images/music.mp3"  id="audio1" autoplay loop="loop"></audio>
+    <div class="music active" id='music'><img src="./images/music.png"></div>
     <div class="wedding-inner">
-    
     <div class="top">
        <div class="big-pic">
             <img class='pic' src="./images/top_pic.jpg" alt="">
@@ -115,16 +116,31 @@
      <div class="swiper-container" id="weddingSwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="./images/life/IMG_9107.jpg" alt="">
+            <img src="./images/wedding/w1.jpg" alt="">
           </div>
           <div class="swiper-slide">
-            <img src="./images/life/IMG_9107.jpg" alt="">
+            <img src="./images/wedding/w2.jpg" alt="">
           </div>
           <div class="swiper-slide">
-            <img src="./images/life/IMG_9107.jpg" alt="">
+            <img src="./images/wedding/w3.jpg" alt="">
           </div>
           <div class="swiper-slide">
-            <img src="./images/life/IMG_9107.jpg" alt="">
+            <img src="./images/wedding/w03.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/wedding/w4.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/wedding/w5.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/wedding/w6.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/wedding/w9.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/wedding/w10.jpg" alt="">
           </div>
         </div>
      </div>
