--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div id="wedding">
    <!-- 内容 -->
    <div id="weddingCons" class="wedding-cons">
-    <audio src="./images/music.mp3"  id="audio1" autoplay loop="loop"></audio>
+    <audio src="./images/music.mp3"  id="audio1"  loop="loop"></audio>
     <div class="music active" id='music'><img src="./images/music.png"></div>
     <div class="wedding-inner">
     <div class="top">
@@ -93,7 +93,7 @@
     </div>
     <div class="item">
         <div class="col">
-            <img src="./images/life/IMG_9107.jpg" alt="">
+            <img src="./images/life/IMG_1894.jpg" alt="">
             <p class="msg">哼哼～</p>
           </div>
         <div class="col">
@@ -175,7 +175,7 @@
     <!-- 封面 -->
     <div class="cover" id="cover">
      <div class="cover_content">
-         <audio src="./images/keyboard.mp3"  id="audio" autoplay loop="loop"></audio>
+         <audio src="./images/keyboard.mp3"  id="audio"  loop="loop"></audio>
          <div id="coverInner"> 
          </div>
          <span id="join">去参加</span>
