--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="format-detection" content="telephone=no,address=no">
   <meta name="apple-mobile-web-app-status-bar-style" content="white">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" >
-  <title>白白和富哥的在线婚礼邀请函</title>
+  <title>小白和富哥的在线婚礼邀请函</title>
   <link rel="stylesheet" href="./css/wedding.css">
   <link rel="stylesheet" href="./swiper/swiper-bundle.min.css">
 </head>
