--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 我对象是*小星星小星星小星星小星星小星星小星星小星星
             </div>
             <div class="pics">
-                <img src="./images/us/bride.jpg" />
+                <img src="./images/us/groome.jpg" />
                 <p>我是新郎</p>
             </div>
           </div>
