--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="white">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" >
   <title>小白和富哥的在线婚礼邀请函</title>
+  <link rel="shortcut icon" href="./ico.jpg"/>
   <link rel="stylesheet" href="./css/wedding.css">
   <link rel="stylesheet" href="./swiper/swiper-bundle.min.css">
 </head>
@@ -37,13 +38,13 @@
             <p>我是新娘</p>
           </div>
           <div class="desc ml10">
-              我对象是一个运动细胞发达头脑更发达但是情商😭 （maybe 可能 也许）low 的直男；他善良又真诚，是一个敢冬天直面冷水洗车的男人～～ ；他说以后会当我的好队友，这让我很安心。。。
+              我对象是一个运动细胞发达头脑更发达（maybe 可能 也许 非常）不浪漫的直男；他善良又真诚，是一个敢冬天直面冷水洗车的男人～～ ；他说以后会当我的好队友，这让我很安心。。。
           </div>
           
         </div>
         <div class="person groom">    
             <div class="desc mr10">
-              我对象是一个可爱、积极向上的小仙女，我们有着不少共同点，比如都喜欢小孩子，对人友善，勤俭节约，最佩服她的一点是烧的菜又香又好吃(^～^)，以后不会变成大胖子吧。。。
+              我媳妇是一个可爱、积极向上的小仙女，我们有着不少共同点，比如都喜欢小孩子，对人友善，勤俭节约，最佩服她的一点是烧的菜又香又好吃(^～^)，以后不会变成大胖子吧。。。
             </div>
             <div class="pics">
                 <img src="./images/us/groome.jpg" />
