--- a/index.html
+++ b/index.html
@@ -176,7 +176,9 @@
          <audio src="./images/keyboard.mp3"  id="audio"  loop="loop"></audio>
          <div id="coverInner"> 
          </div>
-         <span id="join">去参加</span>
+         <span id="join">
+           <img src="./images/arrow.png"/>
+         </span>
      </div>
     </div>
 </div>
