--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
          <audio src="./images/keyboard.mp3"  id="audio"  loop="loop"></audio>
          <div id="coverInner"> 
          </div>
-         <span id="join">
+         <p id="join">
            <img src="./images/arrow.png"/>
-         </span>
+         </p>
      </div>
     </div>
 </div>
